# django-vite

./: .gitignore  Makefile  README.md  pyproject.toml
django_vite/: apps.py
django_vite/templatetags/: vite.py
example/: package-lock.json  package.json  vite.config.js
example/example/: settings.py  urls.py
example/frontend/: main.js  styles.scss
example/templates/: base.html
tests/: manifest.json  settings.py
tests/templatetags/: test_vite.py
