[tool.poetry]
name = "django-vite"
version = "0.1.0"
description = "Integrates Vite with Django"
authors = ["Sam Dudley <dudley.co.uk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_vite"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
